switch back to Java 8 to ensure Android compatbility